--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,17 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>DevOps Aplication</title>
+
+   <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
  </head>
  <body ng-app="app">
  <div role="navigation">
    <div>
-     <div>
-
+     <div ng-repeat="name in ['dataowl', 'envi', 'oxford', 'thegood'] track by $index">
+     	<input type="button" name="name" value="Pull {{name}}" class="pullButtons btn btn-default col-xs-3">
      </div>
+     	<input type="button" name="name" value="Pull All" class="pullButtons btn btn-primary col-xs-12">
    </div>
  </div>
  
@@ -24,5 +28,6 @@
  <script src="vendor/angular/angular.js"></script>
  <script src="vendor/angular-resource/angular-resource.js"></script>
  <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+ <script src="js/app.js"></script>
 </body>
 </html>
