--- a/client/index.html
+++ b/client/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="utf-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>DevOps Aplication</title>
-
-   <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-   <link href="css/style.css" rel="stylesheet">
- </head>
- <body ng-app="app">
- <div role="navigation" ng-controller="pullController">
-   <div>
-     <div ng-repeat="name in ['dataowl', 'envi', 'oxford', 'thegood'] track by $index">
-     	<input type="button" name="name" value="Pull {{name}}" class="btn btn-default col-xs-3" ng-click="pull(name)">
-     </div>
-     	<input type="button" name="name" value="Pull All" class="btn btn-primary col-xs-12" ng-click="pull('all')">
-   </div>
- </div>
- 
- <div>
-   <div ui-view></div>
- </div>
- 
- <script src="vendor/jquery/dist/jquery.js"></script>
- <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
- <script src="vendor/angular/angular.js"></script>
- <script src="vendor/angular-resource/angular-resource.js"></script>
- <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
- <script src="js/app.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DevOps Aplication</title>
+    <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body ng-app="app">
+    <div role="navigation" ng-controller="pullController">
+      <div>
+        <div ng-repeat="name in ['dataowl', 'envi', 'oxford', 'thegood'] track by $index">
+          <input type="button" name="name" value="Pull {{name}}" class="btn btn-default col-xs-3" ng-click="pull(name)">
+        </div>
+        <input type="button" name="name" value="Pull All" class="btn btn-primary col-xs-12" ng-click="pull('all')">
+      </div>
+      <div>
+        <select ng-options="progect as progect.name for progect in progects"
+        ng-model="selectedItem" ng-change="pullProgect()"></select>
+      </div>
+    </div>
+    
+    <div>
+      <div ui-view></div>
+    </div>
+    
+    <script src="vendor/jquery/dist/jquery.js"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/angular-resource/angular-resource.js"></script>
+    <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
