--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
         <input type="button" name="name" value="Pull All" class="btn btn-primary col-xs-12" ng-click="pull('all')">
       </div>
       <div>
-        <select ng-options="progect as progect.name for progect in progects"
+        <select ng-options="project as project.name for project in projects"
         ng-model="selectedItem" ng-change="pullProgect()"></select>
       </div>
     </div>
